# django-project

./: .gitignore
main_app/: .gitignore  pyproject.toml
main_app/app/: settings.py  urls.py
main_app/goods/: admin.py  models.py  urls.py  views.py
main_app/goods/migrations/: 0001_initial.py
main_app/goods/templates/goods/: catalog.html  product.html
main_app/main/: urls.py  views.py
main_app/main/templates/main/: about.html  base.html  index.html
