[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "DevED1613",email = "liveulife13@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
django = "^4.2.7"
